--- a/index.html
+++ b/index.html
@@ -2,15 +2,31 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Galeri Buku Harian</title>
+  <title>Galeri Buku Harian Mahasiswa</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
-      font-family: sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       background: #f5f5f5;
       margin: 0;
       padding: 20px;
     }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 10px;
+    }
+
+    #filter {
+      display: block;
+      margin: 0 auto 30px;
+      max-width: 300px;
+      font-size: 1em;
+      padding: 8px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+
     .galeri-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
@@ -18,19 +34,27 @@
       max-width: 1000px;
       margin: auto;
     }
+
     .galeri-item {
       background: #fff;
       border-radius: 6px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       padding: 10px;
       text-align: center;
+      transition: transform 0.2s ease;
     }
+
+    .galeri-item:hover {
+      transform: scale(1.03);
+    }
+
     .galeri-item img {
       width: 100%;
       height: 220px;
       object-fit: cover;
       border-radius: 4px;
     }
+
     .galeri-item p {
       margin: 8px 0 0;
       font-size: 0.9em;
@@ -39,20 +63,53 @@
   </style>
 </head>
 <body>
-  <h1 style="text-align:center;">Galeri Buku Harian Mahasiswa</h1>
+  <h1>Galeri Buku Harian Mahasiswa</h1>
+  <select id="filter">
+    <option value="">Semua Mata Kuliah</option>
+  </select>
+
   <div class="galeri-grid" id="galeri"></div>
 
   <script>
     fetch("https://script.google.com/macros/s/AKfycbziy2MqmqU7Hbk1lX3PIjq5kCJMdlAAsPeLKdC70GW6PIWG0PvdJonRhLRPJfNHKkZwNw/exec")
       .then(res => res.json())
       .then(data => {
-        const container = document.getElementById("galeri");
-        container.innerHTML = data.map(item => `
-          <div class="galeri-item">
-            <img src="https://drive.google.com/uc?export=view&id=${item.fileId}" alt="Sampul ${item.nama}">
-            <p><strong>${item.nama}</strong></p>
-          </div>
-        `).join('');
+        const galeri = document.getElementById("galeri");
+        const filter = document.getElementById("filter");
+
+        // Ambil daftar mata kuliah unik
+        const matkulSet = new Set(data.map(item => item.matkul));
+        [...matkulSet].sort().forEach(matkul => {
+          const opt = document.createElement("option");
+          opt.value = matkul;
+          opt.textContent = matkul;
+          filter.appendChild(opt);
+        });
+
+        function renderGaleri(selectedMatkul = "") {
+          galeri.innerHTML = "";
+          data.forEach(item => {
+            if (!selectedMatkul || item.matkul === selectedMatkul) {
+              const div = document.createElement("div");
+              div.className = "galeri-item";
+              div.innerHTML = `
+                <img src="https://drive.google.com/uc?export=view&id=${item.fileId}" alt="Sampul ${item.nama}">
+                <p><strong>${item.nama}</strong></p>
+              `;
+              galeri.appendChild(div);
+            }
+          });
+        }
+
+        filter.addEventListener("change", () => {
+          renderGaleri(filter.value);
+        });
+
+        renderGaleri();
+      })
+      .catch(err => {
+        document.getElementById("galeri").innerHTML = "<p style='text-align:center;'>Gagal memuat data galeri.</p>";
+        console.error("Galeri error:", err);
       });
   </script>
 </body>
