--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   const div = document.createElement("div");
   div.className = "galeri-item";
   div.innerHTML = `
-    <img src="https://drive.google.com/uc?export=view&id=${id}" alt="Sampul Mahasiswa">
+   <img src="https://drive.google.com/uc?export=view&id=${id}" alt="Sampul Mahasiswa" onerror="this.style.display='none'">
   `;
   galeri.appendChild(div);
 });
