--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   div.className = "galeri-item";
   div.innerHTML = `
     <a href="https://drive.google.com/file/d/${id}/view" target="_blank">
-  <img src="https://drive.google.com/thumbnail?id=${id}" alt="Sampul Mahasiswa">
-</a>
+      <img src="https://drive.google.com/thumbnail?id=${id}" alt="Sampul Mahasiswa" onerror="this.style.display='none'">
+    </a>
   `;
   galeri.appendChild(div);
 });
