--- a/12341314522442231313.html
+++ b/12341314522442231313.html
@@ -103,7 +103,7 @@
 <body>
 
   <div id="skorDisplay"></div>
-  <div id="starter" onclick="unlockAudio()">Mulai</div>
+  <div id="starter" onclick="unlockAudio()">Start</div>
   <div id="ornamenContainer"></div>
   <div id="glowLayer"></div>
 
