--- a/12341314522442231313.html
+++ b/12341314522442231313.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <title>Tampilan Skor</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tampilan Skor & Kategori</title>
+
   <style>
     html, body {
       margin: 0;
@@ -10,8 +12,8 @@
       height: 100%;
       width: 100%;
       overflow: hidden;
-      transition: background-color 0.5s ease;
       background-color: white;
+      font-family: Arial, sans-serif;
       color: white;
     }
 
@@ -62,14 +64,8 @@
     }
 
     @keyframes jatuh {
-      0% {
-        transform: translate(0, 0) rotate(0deg);
-        opacity: 1;
-      }
-      100% {
-        transform: translate(var(--x), 100vh) rotate(var(--r));
-        opacity: 0;
-      }
+      0% { transform: translate(0, 0) rotate(0deg); opacity: 1; }
+      100% { transform: translate(var(--x), 100vh) rotate(var(--r)); opacity: 0; }
     }
 
     #glowLayer {
@@ -98,14 +94,112 @@
         filter: blur(60px);
       }
     }
+
+    /* Kategori Styling */
+    #filterButtons {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 10000;
+    }
+
+    .filterBtn {
+      padding: 8px 14px;
+      margin: 4px;
+      font-size: 14px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      background-color: #555;
+      color: white;
+    }
+
+    .filterBtn.active {
+      background-color: #007bff;
+    }
+
+    #instructions {
+      position: absolute;
+      top: 60px;
+      left: 10px;
+      max-width: 400px;
+      background: #fff;
+      color: #000;
+      padding: 15px;
+      border-radius: 8px;
+      font-size: 14px;
+      line-height: 1.5;
+      z-index: 10000;
+    }
+
+    #shuffleBtn {
+      position: absolute;
+      top: 300px;
+      left: 10px;
+      padding: 10px 20px;
+      font-size: 14px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      z-index: 10000;
+    }
+
+    #categoryContainer {
+      position: absolute;
+      top: 360px;
+      left: 10px;
+      max-width: 400px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      z-index: 10000;
+    }
+
+    .category {
+      font-size: 0.9em;
+      font-weight: bold;
+      padding: 12px;
+      border-radius: 10px;
+      color: #fff;
+      min-width: 120px;
+      max-width: 180px;
+      word-wrap: break-word;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
   </style>
 </head>
 <body>
 
   <div id="skorDisplay"></div>
-  <div id="starter" onclick="unlockAudio()">Start</div>
+  <div id="starter" onclick="unlockAudio()">Mulai</div>
   <div id="ornamenContainer"></div>
   <div id="glowLayer"></div>
+
+  <div id="filterButtons">
+    <button class="filterBtn active" data-filter="american">Survey of American Literature</button>
+    <button class="filterBtn" data-filter="anglophonic">Survey of Anglophonic Literature</button>
+    <button class="filterBtn" data-filter="novel">The Novel</button>
+  </div>
+
+  <div id="instructions">
+    <strong>Instructions</strong><br><br>
+    <span id="novelNotice" style="display:none;">
+      <em>Prepare the novel you have selected.</em><br><br>
+      Once you click <strong>Randomize</strong>, <strong>9 categories</strong> will appear.<br>
+      You may select <strong>one category</strong> and will be asked <strong>up to three data analysis</strong>.<br>
+      You may select <strong>one additional category</strong> without clicking again.
+    </span>
+    <span id="defaultNotice">
+      Once you click <strong>Randomize</strong>, <strong>9 categories</strong> will appear.<br>
+      You may select <strong>one category</strong> and will be asked <strong>up to three questions</strong>.<br>
+      You may select <strong>one additional category</strong> without clicking again.
+    </span>
+  </div>
+
+  <button id="shuffleBtn">Randomize Category</button>
+  <div id="categoryContainer"></div>
 
   <audio id="niceTry" src="https://yogaptek.github.io/suara/drum-roll-and-cymbals.mp3" preload="auto"></audio>
   <audio id="notBad" src="https://assets.mixkit.co/sfx/download/mixkit-game-notification-wave-2314.mp3" preload="auto"></audio>
@@ -149,7 +243,7 @@
       audioUnlocked = true;
     }
 
-    function getColorBySkor(skor) {
+       function getColorBySkor(skor) {
       if (skor >= 0 && skor <= 29) return '#990000';
       if (skor >= 30 && skor <= 59) return '#ff6600';
       if (skor >= 60 && skor <= 79) return '#ffcc00';
@@ -230,7 +324,92 @@
         }, 3000);
       }
     });
+
+    // Kategori American Literature
+    const americanCategories = [
+      "Native American Literature", "Realism", "Modernism", "Naturalism", "Romanticism",
+      "Declaration of Independence", "Savages", "Transcendentalism", "Slave Narrative", "Colonial Period",
+      "Puritanism", "John Smith", "John Winthrop", "Olaudah Equiano", "Melting Pot and Salad Bowl",
+      "Self Reliance", "The Cask of Amontillado", "Writing Style", "Local Color", "The Black Minister's Veil",
+      "Afro American Voices in Modern Era", "Enlightenment", "What We Talk About When We Talk about Love",
+      "Richard Wright", "Langston Hughes", "American Literature in General", "American Authors",
+      "Present your Intellectual Diary in 3 minutes", "Random Question with 80pts", "Ask a question 30pts"
+    ];
+
+    const anglophonicCategories = [
+      "Oceania Literature", "African Literature", "Khalil Gibran", "Anglophonic Authors", "Anglophonic Literature",
+      "Post-Colonial Topics", "Crisis Identity", "Slavery", "Political Issue", "Ask a Question for 30pts",
+      "Random Question for 80pts", "The Will of Allah", "A Civil Peace", "Local Color", "Gender Issue",
+      "An Astrologer's Day", "West and East Concept", "Writing Style", "Present your Intellectual Diary in 3 minutes",
+      "Female Fiction", "Stream of Consciousness", "Colonial Legacies"
+    ];
+
+    const novelCategories = [
+      "Climax", "Voice of Narrator", "Tone and Mood", "Setting", "Character and Characterization",
+      "Three Act of Structure", "Resolution", "Theme", "Personal Review", "Random Questions for 80pts",
+      "Symbol and Allegory", "Irony", "Writing Style", "Fabula and Syuzhet", "Plot", "Gothic Literature",
+      "Absurdism", "Modernism", "Romanticism", "Present your Intellectual Diary in 3 minutes", "Social Context"
+    ];
+
+    const colors = [
+      "#e74c3c", "#3498db", "#2ecc71", "#9b59b6", "#f39c12",
+      "#1abc9c", "#e67e22", "#34495e", "#d35400", "#7f8c8d",
+      "#16a085", "#c0392b", "#2980b9", "#8e44ad", "#27ae60"
+    ];
+
+    let clickCount = 0;
+    const maxClicks = 5;
+    let currentFilter = "american";
+
+    const shuffleBtn = document.getElementById("shuffleBtn");
+    const container = document.getElementById("categoryContainer");
+    const filterButtons = document.querySelectorAll(".filterBtn");
+    const novelNotice = document.getElementById("novelNotice");
+    const defaultNotice = document.getElementById("defaultNotice");
+
+    filterButtons.forEach(btn => {
+      btn.addEventListener("click", () => {
+        filterButtons.forEach(b => b.classList.remove("active"));
+        btn.classList.add("active");
+        currentFilter = btn.dataset.filter;
+        container.innerHTML = "";
+
+        if (currentFilter === "novel") {
+          novelNotice.style.display = "inline";
+          defaultNotice.style.display = "none";
+        } else {
+          novelNotice.style.display = "none";
+          defaultNotice.style.display = "inline";
+        }
+      });
+    });
+
+    function shuffleAndDisplay() {
+      container.innerHTML = "";
+      let source = [];
+      let limit = 9;
+
+      if (currentFilter === "american") source = americanCategories;
+      else if (currentFilter === "anglophonic") source = anglophonicCategories;
+      else if (currentFilter === "novel") source = novelCategories;
+
+      const shuffled = source.sort(() => 0.5 - Math.random()).slice(0, limit);
+      shuffled.forEach((cat, index) => {
+        const div = document.createElement("div");
+        div.className = "category";
+        div.textContent = cat;
+        div.style.backgroundColor = colors[index % colors.length];
+        container.appendChild(div);
+      });
+
+      clickCount++;
+      if (clickCount >= maxClicks) {
+        shuffleBtn.disabled = true;
+      }
+    }
+
+    shuffleBtn.addEventListener("click", shuffleAndDisplay);
   </script>
 
 </body>
-</html
+</html>
