--- a/12341314522442231313.html
+++ b/12341314522442231313.html
@@ -1,15 +1,3 @@
-@keyframes shake {
-  0% { transform: translate(0, 0); }
-  20% { transform: translate(-5px, 0); }
-  40% { transform: translate(5px, 0); }
-  60% { transform: translate(-5px, 0); }
-  80% { transform: translate(5px, 0); }
-  100% { transform: translate(0, 0); }
-}
-
-.shake {
-  animation: shake 0.6s ease-in-out;
-}
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -119,6 +107,12 @@
       animation: shake 0.6s ease-in-out;
     }
 
+    #instructions,
+    #shuffleBtn,
+    #categoryContainer {
+      display: none;
+    }
+
     #instructions {
       position: absolute;
       top: 20px;
@@ -174,7 +168,7 @@
 <body>
 
   <div id="skorDisplay"></div>
-  <div id="starter" onclick="unlockAudio()">Mulai</div>
+  <div id="starter" onclick="unlockAudio()">Start</div>
   <div id="ornamenContainer"></div>
   <div id="glowLayer"></div>
 
@@ -228,6 +222,10 @@
         audio.currentTime = 0;
       });
       audioUnlocked = true;
+
+      document.getElementById('instructions').style.display = 'block';
+      document.getElementById('shuffleBtn').style.display = 'inline-block';
+      document.getElementById('categoryContainer').style.display = 'flex';
     }
 
     function getColorBySkor(skor) {
@@ -245,11 +243,124 @@
         audio.currentTime = 0;
       });
 
-      if (skor >= 0 && skor <= 40) {
-        niceTry.play();
+      if (skor >= 0 && skor <= 40
+                  niceTry.play();
       } else if (skor >= 41 && skor <= 60) {
         notBad.play();
       } else if (skor >= 61 && skor <= 79) {
         goodJob.play();
       } else if (skor >= 80 && skor <= 100) {
-        applause.play
+        applause.play();
+      }
+    }
+
+    function tampilkanOrnamen() {
+      const simbol = ['🎉', '✨', '⭐', '💥', '🎈', '🌟'];
+      for (let i = 0; i < 30; i++) {
+        const ornamen = document.createElement('div');
+        ornamen.className = 'ornamen';
+        ornamen.textContent = simbol[Math.floor(Math.random() * simbol.length)];
+
+        const startX = Math.random() * 100;
+        const offsetX = (Math.random() - 0.5) * 200;
+        const rotasi = Math.random() * 720 - 360;
+
+        ornamen.style.left = `${startX}vw`;
+        ornamen.style.top = '-50px';
+        ornamen.style.fontSize = `${Math.random() * 20 + 20}px`;
+        ornamen.style.setProperty('--x', `${offsetX}px`);
+        ornamen.style.setProperty('--r', `${rotasi}deg`);
+
+        ornamenContainer.appendChild(ornamen);
+        setTimeout(() => ornamen.remove(), 2000);
+      }
+    }
+
+    function tampilkanGlow() {
+      glowLayer.style.animation = 'none';
+      void glowLayer.offsetWidth;
+      glowLayer.style.animation = 'glowBurst 1s ease-out forwards';
+    }
+
+    firebase.database().ref('trigger').on('value', function(snapshot) {
+      const val = snapshot.val();
+      console.log('📡 Data diterima:', val);
+
+      if (val && typeof val === 'object' && val.label) {
+        const skor = parseInt(val.skor);
+        const warna = getColorBySkor(skor);
+
+        document.body.style.backgroundColor = warna;
+        document.documentElement.style.backgroundColor = warna;
+
+        skorDisplay.textContent = val.label;
+        skorDisplay.style.visibility = 'visible';
+
+        playFeedbackSound(skor);
+        tampilkanOrnamen();
+        tampilkanGlow();
+
+        // Efek getar kategori
+        document.querySelectorAll('.category').forEach(cat => {
+          cat.classList.add('shake');
+        });
+        setTimeout(() => {
+          document.querySelectorAll('.category').forEach(cat => {
+            cat.classList.remove('shake');
+          });
+        }, 700);
+
+        setTimeout(() => {
+          skorDisplay.style.visibility = 'hidden';
+          skorDisplay.textContent = '';
+          document.body.style.backgroundColor = 'white';
+          document.documentElement.style.backgroundColor = 'white';
+          firebase.database().ref('trigger').set('idle');
+        }, 3000);
+      }
+    });
+
+    const americanCategories = [
+      "Native American Literature", "Realism", "Modernism", "Naturalism", "Romanticism",
+      "Declaration of Independence", "Savages", "Transcendentalism", "Slave Narrative", "Colonial Period",
+      "Puritanism", "John Smith", "John Winthrop", "Olaudah Equiano", "Melting Pot and Salad Bowl",
+      "Self Reliance", "The Cask of Amontillado", "Writing Style", "Local Color", "The Black Minister's Veil",
+      "Afro American Voices in Modern Era", "Enlightenment", "What We Talk About When We Talk about Love",
+      "Richard Wright", "Langston Hughes", "American Literature in General", "American Authors",
+      "Present your Intellectual Diary in 3 minutes", "Random Question with 80pts", "Ask a question 30pts"
+    ];
+
+    const colors = [
+      "#e74c3c", "#3498db", "#2ecc71", "#9b59b6", "#f39c12",
+      "#1abc9c", "#e67e22", "#34495e", "#d35400", "#7f8c8d",
+      "#16a085", "#c0392b", "#2980b9", "#8e44ad", "#27ae60"
+    ];
+
+    let clickCount = 0;
+    const maxClicks = 5;
+
+    const shuffleBtn = document.getElementById("shuffleBtn");
+    const container = document.getElementById("categoryContainer");
+
+    function shuffleAndDisplay() {
+      container.innerHTML = "";
+      const shuffled = americanCategories.sort(() => 0.5 - Math.random()).slice(0, 9);
+      shuffled.forEach((cat, index) => {
+        const div = document.createElement("div");
+        div.className = "category";
+        div.textContent = cat;
+        div.style.backgroundColor = colors[index % colors.length];
+        container.appendChild(div);
+      });
+
+      clickCount++;
+      if (clickCount >= maxClicks) {
+        shuffleBtn.disabled = true;
+      }
+    }
+
+    shuffleBtn.addEventListener("click", shuffleAndDisplay);
+  </script>
+
+</body>
+</html>
