--- a/12341314522442231313.html
+++ b/12341314522442231313.html
@@ -186,8 +186,7 @@
   <audio id="notBad" src="https://assets.mixkit.co/sfx/download/mixkit-game-notification-wave-2314.mp3" preload="auto"></audio>
   <audio id="goodJob" src="https://assets.mixkit.co/sfx/download/mixkit-achievement-bell-600.mp3" preload="auto"></audio>
   <audio id="applause" src="https://assets.mixkit.co/sfx/download/mixkit-small-crowd-applause-503.mp3" preload="auto"></audio>
-
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 
   <script>
@@ -243,8 +242,8 @@
         audio.currentTime = 0;
       });
 
-      if (skor >= 0 && skor <= 40
-                  niceTry.play();
+      if (skor >= 0 && skor <= 40) {
+        niceTry.play();
       } else if (skor >= 41 && skor <= 60) {
         notBad.play();
       } else if (skor >= 61 && skor <= 79) {
@@ -300,7 +299,6 @@
         tampilkanOrnamen();
         tampilkanGlow();
 
-        // Efek getar kategori
         document.querySelectorAll('.category').forEach(cat => {
           cat.classList.add('shake');
         });
