Refactor HTML for score display and instructions
Updated the HTML structure and styling for better presentation and user instructions.

--- a/12341314522442231313.html
+++ b/12341314522442231313.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tampilan Skor & American Literature</title>
+  <title>Score Display & American Literature</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     html, body {
       margin: 0;
@@ -14,6 +15,10 @@
       background-color: white;
       font-family: Arial, sans-serif;
       color: white;
+    }
+
+    body {
+      overflow-y: hidden;
     }
 
     #skorDisplay {
@@ -113,45 +118,6 @@
       display: none;
     }
 
-    #instructions {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      max-width: 400px;
-      background: #fff;
-      color: #000;
-      padding: 15px;
-      border-radius: 8px;
-      font-size: 14px;
-      line-height: 1.5;
-      z-index: 10000;
-    }
-
-    #shuffleBtn {
-      position: absolute;
-      top: 200px;
-      left: 20px;
-      padding: 10px 20px;
-      font-size: 14px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      z-index: 10000;
-    }
-
-    #categoryContainer {
-      position: absolute;
-      top: 260px;
-      left: 20px;
-      max-width: 400px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      z-index: 10000;
-    }
-
     .category {
       font-size: 0.9em;
       font-weight: bold;
@@ -172,15 +138,21 @@
   <div id="ornamenContainer"></div>
   <div id="glowLayer"></div>
 
-  <div id="instructions">
-    <strong>Survey of American Literature</strong><br><br>
-    Klik tombol <strong>Randomize Category</strong> untuk menampilkan 9 kategori acak.<br>
-    Pilih satu kategori dan siapkan jawaban untuk 3 pertanyaan analisis.<br>
-    Jika perlu, kamu boleh memilih satu kategori tambahan tanpa klik ulang.
-  </div>
+  <div class="container-fluid vh-100 d-flex flex-column justify-content-center align-items-center">
+    <div id="instructions" class="bg-light text-dark p-4 rounded shadow" style="max-width: 600px;">
+      <h4 class="mb-3">Instructions</h4>
+      <ol class="fs-6">
+        <li>Once you click the <strong>Randomize</strong> button, 9 categories will appear on the screen.</li>
+        <li>The button may be used up to five times. Each participant is allowed to click it once.</li>
+        <li>You may select one category and will be asked up to three questions based on your choice.</li>
+        <li>If you feel your responses are not quite satisfying, you may select one additional category — without clicking the button again.</li>
+      </ol>
+    </div>
 
-  <button id="shuffleBtn">Randomize Category</button>
-  <div id="categoryContainer"></div>
+    <button id="shuffleBtn" class="btn btn-primary mt-4">Randomize Category</button>
+
+    <div id="categoryContainer" class="d-flex flex-wrap justify-content-center align-items-center mt-4 gap-3" style="max-width: 800px;"></div>
+  </div>
 
   <audio id="niceTry" src="https://yogaptek.github.io/suara/drum-roll-and-cymbals.mp3" preload="auto"></audio>
   <audio id="notBad" src="https://assets.mixkit.co/sfx/download/mixkit-game-notification-wave-2314.mp3" preload="auto"></audio>
@@ -283,8 +255,6 @@
 
     firebase.database().ref('trigger').on('value', function(snapshot) {
       const val = snapshot.val();
-      console.log('📡 Data diterima:', val);
-
       if (val && typeof val === 'object' && val.label) {
         const skor = parseInt(val.skor);
         const warna = getColorBySkor(skor);
