--- a/12341314522442231313.html
+++ b/12341314522442231313.html
@@ -33,6 +33,9 @@
       text-align: center;
       white-space: nowrap;
       z-index: 2;
+      -webkit-text-stroke: 4px black; /* ketebalan dan warna stroke */
+}
+
     }
 
     #starter {
