--- a/12341314522442231313.html
+++ b/12341314522442231313.html
@@ -33,7 +33,7 @@
       text-align: center;
       white-space: nowrap;
       z-index: 2;
-      -webkit-text-stroke: 4px black; /* ketebalan dan warna stroke */
+      -webkit-text-stroke: 4px orange; /* ketebalan dan warna stroke */
 }
 
     }
